samples/_failures_safe/1761357568_c11b11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a180c3a2.c: In function ‘main’:
./samples/SAFE/__tmp_a180c3a2.c:152:13: error: expected declaration or statement at end of input
  152 |             printf("Element [%zu][%zu]: ", i, j);
      |             ^~~~~~
./samples/SAFE/__tmp_a180c3a2.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a180c3a2.c:152:13: error: expected declaration or statement at end of input
